--- a/articles/active-directory/managed-identities-azure-resources/index.yml
+++ b/articles/active-directory/managed-identities-azure-resources/index.yml
@@ -1,73 +1,79 @@
 ### YamlMime:YamlDocument
+ms.openlocfilehash: c4613654e5f1da6ef55c1f648fff1687b21fe87d
+ms.sourcegitcommit: 644de9305293600faf9c7dad951bfeee334f0ba3
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 01/25/2019
+ms.locfileid: "54901946"
 documentType: LandingData
 title: Dokumentation om Azure AD-hanterade identiteter för Azure-resurser
 metadata:
-  document_id: null
+  document_id: 
   title: Dokumentation om Azure AD-hanterade identiteter för Azure-resurser
   description: Lär dig hur du använder hanterade identiteter för Azure-resurser för att autentisera säkert till Azure-molntjänster utan att behöva ha autentiseringsuppgifterna i källkoden.
   services: active-directory
   ms.component: msi
-  author: daveba
+  author: priyamohanram
   manager: daveba
   ms.service: active-directory
   ms.tgt_pltfrm: na
   ms.devlang: na
   ms.topic: landing-page
   ms.date: 03/16/2018
-  ms.author: daveba
+  ms.author: priyamo
 abstract:
   description: Med hanterade identiteter för Azure-resurser får Azure-tjänsterna en automatiskt hanterad identitet i Azure Active Directory (Azure AD). Du kan använda den här identiteten för att autentisera till alla tjänster som stöder Azure AD-autentisering utan att behöva ha några autentiseringsuppgifter i koden.  Lär dig hur du skapar och hanterar hanterade identiteter för Azure-resurser med våra snabbstarter och självstudier.
   aside:
     image:
-      alt: null
+      alt: 
       height: 112
       src: media/index/video-thumb-landing-page.png
       width: 200
     title: Introduktion till hanterade identiteter för Azure-resurser
-    href: 'https://www.youtube.com/embed/bBi1bll2928'
+    href: https://www.youtube.com/embed/bBi1bll2928
     width: 200
 sections:
-  - title: Snabbstarter på fem minuter
+- title: Snabbstarter på fem minuter
+  items:
+  - type: paragraph
+    text: Lär dig hur du använder hanterade identiteter för Azure-resurser för att få åtkomst till API:et för Azure Resource Manager
+  - type: list
+    style: unordered
     items:
-      - type: paragraph
-        text: 'Lär dig hur du använder hanterade identiteter för Azure-resurser för att få åtkomst till API:et för Azure Resource Manager'
-      - type: list
-        style: unordered
-        items:
-          - html: <a href="/azure/active-directory/managed-service-identity/tutorial-windows-vm-access-arm">Få åtkomst till Azure Resource Manager från en virtuell Windows Azure-dator</a>
-          - html: <a href="/azure/active-directory/managed-service-identity/tutorial-linux-vm-access-arm">Få åtkomst till Azure Resource Manager från en virtuell Linux Azure-dator</a>
-  - title: Stegvisa självstudier
+    - html: <a href="/azure/active-directory/managed-service-identity/tutorial-windows-vm-access-arm">Få åtkomst till Azure Resource Manager från en virtuell Windows Azure-dator</a>
+    - html: <a href="/azure/active-directory/managed-service-identity/tutorial-linux-vm-access-arm">Få åtkomst till Azure Resource Manager från en virtuell Linux Azure-dator</a>
+- title: Stegvisa självstudier
+  items:
+  - type: paragraph
+    text: Lär dig hur du använder hanterade identiteter för Azure-resurser för att få säker åtkomst till Azure-resurser
+  - type: paragraph
+    text: Windows VM/VMSS
+  - type: list
+    style: unordered
     items:
-      - type: paragraph
-        text: Lär dig hur du använder hanterade identiteter för Azure-resurser för att få säker åtkomst till Azure-resurser
-      - type: paragraph
-        text: Windows VM/VMSS
-      - type: list
-        style: unordered
-        items:
-          - html: <a href="/azure/active-directory/managed-service-identity/tutorial-windows-vm-access-datalake">Få åtkomst till Azure Data Lake Store</a>
-          - html: <a href="/azure/active-directory/managed-service-identity/tutorial-windows-vm-access-storage">Få åtkomst till Azure Storage med en åtkomstnyckel</a>
-          - html: <a href="/azure/active-directory/managed-service-identity/tutorial-windows-vm-access-sql">Få åtkomst till Azure SQL</a>
-          - html: <a href="/azure/active-directory/managed-service-identity/tutorial-windows-vm-access-nonaad">Få åtkomst till Azure Key Vault</a>
-          - html: <a href="/azure/active-directory/managed-service-identity/tutorial-windows-vm-access-cosmos-db">Få åtkomst till Azure Cosmos DB</a>
-          - html: <a href="/azure/active-directory/managed-service-identity/tutorial-windows-vm-ua-arm">Få åtkomst till Azure Resource Manager med en användartilldelad identitet</a>
-      - type: paragraph
-        text: Linux VM/VMSS
-      - type: list
-        style: unordered
-        items:
-          - html: <a href="/azure/active-directory/managed-service-identity/tutorial-linux-vm-access-datalake">Få åtkomst till Azure Data Lake Store</a>
-          - html: <a href="/azure/active-directory/managed-service-identity/tutorial-linux-vm-access-storage-access-key">Få åtkomst till Azure Storage med en åtkomstnyckel</a>
-          - html: <a href="/azure/active-directory/managed-service-identity/tutorial-linux-vm-access-nonaad">Få åtkomst till Azure Key Vault</a>
-          - html: <a href="/azure/active-directory/managed-service-identity/tutorial-linux-vm-access-cosmos-db">Få åtkomst till Azure Cosmos DB</a>
-          - html: <a href="/azure/active-directory/managed-service-identity/msi-tutorial-linux-vm-access-arm">Få åtkomst till Azure Resource Manager med en användartilldelad identitet</a>
-  - title: Referens
+    - html: <a href="/azure/active-directory/managed-service-identity/tutorial-windows-vm-access-datalake">Få åtkomst till Azure Data Lake Store</a>
+    - html: <a href="/azure/active-directory/managed-service-identity/tutorial-windows-vm-access-storage">Få åtkomst till Azure Storage med en åtkomstnyckel</a>
+    - html: <a href="/azure/active-directory/managed-service-identity/tutorial-windows-vm-access-sql">Få åtkomst till Azure SQL</a>
+    - html: <a href="/azure/active-directory/managed-service-identity/tutorial-windows-vm-access-nonaad">Få åtkomst till Azure Key Vault</a>
+    - html: <a href="/azure/active-directory/managed-service-identity/tutorial-windows-vm-access-cosmos-db">Få åtkomst till Azure Cosmos DB</a>
+    - html: <a href="/azure/active-directory/managed-service-identity/tutorial-windows-vm-ua-arm">Få åtkomst till Azure Resource Manager med en användartilldelad identitet</a>
+  - type: paragraph
+    text: Linux VM/VMSS
+  - type: list
+    style: unordered
     items:
-      - type: list
-        style: cards
-        className: cardsD
-        items:
-          - title: Kommandorad
-            html: '<p><a href="/powershell/module/azurerm.managedserviceidentity#managed_service_identity">Azure PowerShell</a></p><p><a href="/cli/azure/identity">Azure CLI</a></p>'
-          - title: Språk
-            html: '<p><a href="/dotnet/api/microsoft.azure.management.resourcemanager.fluent.authentication">NET</a></p><p><a href="https://github.com/Azure/azure-libraries-for-java#ready-to-run-code-samples-for-virtual-machines">Java</a></p><p><a href="/javascript/api/ms-rest-azure">Node.js</a></p><p><a href="/python/api/azure.mgmt.msi">Python</a></p></p><a href="https://rubygems.org/gems/azure_mgmt_msi">Ruby</a></p></p><a href="https://godoc.org/github.com/Azure/azure-sdk-for-go/services/preview/msi/mgmt/2015-08-31-preview/msi">Go</a></p>'
+    - html: <a href="/azure/active-directory/managed-service-identity/tutorial-linux-vm-access-datalake">Få åtkomst till Azure Data Lake Store</a>
+    - html: <a href="/azure/active-directory/managed-service-identity/tutorial-linux-vm-access-storage-access-key">Få åtkomst till Azure Storage med en åtkomstnyckel</a>
+    - html: <a href="/azure/active-directory/managed-service-identity/tutorial-linux-vm-access-nonaad">Få åtkomst till Azure Key Vault</a>
+    - html: <a href="/azure/active-directory/managed-service-identity/tutorial-linux-vm-access-cosmos-db">Få åtkomst till Azure Cosmos DB</a>
+    - html: <a href="/azure/active-directory/managed-service-identity/msi-tutorial-linux-vm-access-arm">Få åtkomst till Azure Resource Manager med en användartilldelad identitet</a>
+- title: Referens
+  items:
+  - type: list
+    style: cards
+    className: cardsD
+    items:
+    - title: Kommandorad
+      html: <p><a href="/powershell/module/az.managedserviceidentity#managed_service_identity">Azure PowerShell</a></p><p><a href="/cli/azure/identity">Azure CLI</a></p>
+    - title: Språk
+      html: <p><a href="/dotnet/api/microsoft.azure.management.resourcemanager.fluent.authentication">NET</a></p><p><a href="https://github.com/Azure/azure-libraries-for-java#ready-to-run-code-samples-for-virtual-machines">Java</a></p><p><a href="/javascript/api/ms-rest-azure">Node.js</a></p><p><a href="/python/api/azure.mgmt.msi">Python</a></p></p><a href="https://rubygems.org/gems/azure_mgmt_msi">Ruby</a></p></p><a href="https://godoc.org/github.com/Azure/azure-sdk-for-go/services/preview/msi/mgmt/2015-08-31-preview/msi">Go</a></p>
