--- a/articles/azure-monitor/toc.yml
+++ b/articles/azure-monitor/toc.yml
@@ -634,14 +634,18 @@ items:
         href: platform/view-designer-parts.md
       - name: Filter
         href: platform/view-designer-filters.md
+    - name: Instrumentpaneler
+      items:
+      - name: Logs
+        href: platform/dashboards.md
+      - name: Program
+        href: app/app-insights-dashboards.md
     - name: Power BI
       items:
       - name: Exportera loggdata
         href: platform/powerbi.md
       - name: Exportera programdata
         href: app/export-power-bi.md
-    - name: Instrumentpaneler
-      href: app/app-insights-dashboards.md
     - name: Skicka data till Grafana
       href: platform/grafana-plugin.md
   - name: Analysera data
@@ -965,7 +969,7 @@ items:
   - name: Scheman
     items:
     - name: Tjänster, kategorier och scheman för diagnostikloggar
-      href: platform/diagnostic-logs-schema.md
+      href: platform/tutorial-dashboards.md
     - name: Händelseschema för aktivitetslogg
       href: platform/activity-log-schema.md
     - name: Schema för Azure Diagnostics-tillägg
@@ -1017,9 +1021,9 @@ items:
     href: https://stackoverflow.com/search?q=monitoring
   - name: Kodexempel
     href: https://azure.microsoft.com/resources/samples/?service=monitor
-ms.openlocfilehash: 3a3770418ff8463ec2afa39105a1722addc7c3d2
-ms.sourcegitcommit: b4755b3262c5b7d546e598c0a034a7c0d1e261ec
+ms.openlocfilehash: adf92fafe1c1c0fa855d3658c41dd3563d4b26b2
+ms.sourcegitcommit: 9b6492fdcac18aa872ed771192a420d1d9551a33
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/24/2019
-ms.locfileid: "54888030"
+ms.lasthandoff: 01/22/2019
+ms.locfileid: "54448694"
