--- a/articles/azure-stack/partner/TOC.yml
+++ b/articles/azure-stack/partner/TOC.yml
@@ -17,16 +17,16 @@ items:
     href: azure-stack-vaas-automate-with-powershell.md
 - name: Hur du hjälper
   items:
-  - name: Schemalägg din första test
-    href: azure-stack-vaas-schedule-test-pass.md
   - name: Distribuera lokal agent
     href: azure-stack-vaas-local-agent.md
-  - name: Verifiera en ny Azure Stack-lösning
-    href: azure-stack-vaas-validate-solution-new.md
+  - name: Schemalägga testet
+    href: azure-stack-vaas-schedule-test-pass.md
   - name: Skapa ett OEM-paket
     href: azure-stack-vaas-create-oem-package.md
   - name: Verifiera OEM-paket
     href: azure-stack-vaas-validate-oem-package.md
+  - name: Verifiera en ny Azure Stack-lösning
+    href: azure-stack-vaas-validate-solution-new.md
   - name: Verifiera programuppdateringar från Microsoft
     href: azure-stack-vaas-validate-microsoft-updates.md
   - name: Interaktiva funktionen verifiering testning
@@ -64,9 +64,9 @@ items:
     href: https://stackoverflow.com/questions/tagged/azure-stack
   - name: Utbildning och certifiering
     href: https://docs.microsoft.com/azure/azure-stack/azure-stack-train-and-cert
-ms.openlocfilehash: 6d8c56bea3baf56303ae6f2a5b6cb7776410b47c
-ms.sourcegitcommit: 30d23a9d270e10bb87b6bfc13e789b9de300dc6b
-ms.translationtype: HT
+ms.openlocfilehash: 13c7734153f55f5822602b086a6dbc5e66624903
+ms.sourcegitcommit: dede0c5cbb2bd975349b6286c48456cfd270d6e9
+ms.translationtype: MT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/08/2019
-ms.locfileid: "54103034"
+ms.lasthandoff: 01/16/2019
+ms.locfileid: "54332242"
