--- a/articles/dns/TOC.yml
+++ b/articles/dns/TOC.yml
@@ -34,13 +34,13 @@ items:
     href: cli-samples.md
 - name: Begrepp
   items:
-  - name: DNS-zoner och -poster
+  - name: Zoner och poster
     href: dns-zones-records.md
-  - name: DNS-aliasposter
+  - name: Aliasposter
     href: dns-alias.md
-  - name: DNS-delegering med Azure DNS
+  - name: Delegering med Azure DNS
     href: dns-domain-delegation.md
-  - name: Vanliga frågor och svar om DNS
+  - name: VANLIGA FRÅGOR OCH SVAR
     href: dns-faq.md
   - name: Använda privata DNS-zoner
     href: private-dns-overview.md
@@ -148,9 +148,9 @@ items:
     href: https://azure.microsoft.com/pricing/calculator/
   - name: Tjänstuppdateringar
     href: https://azure.microsoft.com/updates/?product=dns
-ms.openlocfilehash: d33aefd15104bc3cd35d1c904ffdbb7c7a9f0ec8
-ms.sourcegitcommit: 9999fe6e2400cf734f79e2edd6f96a8adf118d92
+ms.openlocfilehash: ac539c7b7454a642a8bc1d36ef01a5e7a232375d
+ms.sourcegitcommit: 9b6492fdcac18aa872ed771192a420d1d9551a33
 ms.translationtype: HT
 ms.contentlocale: sv-SE
 ms.lasthandoff: 01/22/2019
-ms.locfileid: "54428553"
+ms.locfileid: "54446372"
