--- a/articles/media-services/latest/TOC.yml
+++ b/articles/media-services/latest/TOC.yml
@@ -44,9 +44,9 @@ items:
       href: filters-dynamic-manifest-overview.md
     - name: Tillgångar
       href: assets-concept.md
-    - name: Viktiga innehållsprinciper
+    - name: Principer för innehållsnycklar
       href: content-key-policy-concept.md
-    - name: Livehändelser och liveresultat
+    - name: LiveEvents och LiveOutputs
       href: live-events-outputs-concept.md
     - name: Slutpunkter för direktuppspelning
       href: streaming-endpoint-concept.md
@@ -203,9 +203,9 @@ items:
     href: frequently-asked-questions.md
   - name: Azure-moln och -regioner
     href: azure-clouds-regions.md
-ms.openlocfilehash: c30302fa289ade85870db3e89fa70f5e79f61a99
-ms.sourcegitcommit: b4755b3262c5b7d546e598c0a034a7c0d1e261ec
+ms.openlocfilehash: dfafe49ba2f520bdc44c5a3e3cad0201d6e56da5
+ms.sourcegitcommit: 98645e63f657ffa2cc42f52fea911b1cdcd56453
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/24/2019
-ms.locfileid: "54881383"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54810864"
