--- a/articles/role-based-access-control/TOC.yml
+++ b/articles/role-based-access-control/TOC.yml
@@ -64,7 +64,7 @@ items:
       href: custom-roles-rest.md
   - name: Visa aktivitetsloggar
     href: change-history-report.md
-  - name: Utöka åtkomst för att hantera alla prenumerationer
+  - name: Öka åtkomsten för global administratör
     href: elevate-access-global-admin.md
   - name: Hantera åtkomst för externa användare
     href: role-assignments-external-users.md
@@ -94,9 +94,9 @@ items:
   items:
   - name: Utveckla dina färdigheter med Microsoft Learn
     href: /learn/browse/?products=azure-active-directory
-ms.openlocfilehash: fb2b7baea56a3dfc1b4fbc07c72262e09326c07a
-ms.sourcegitcommit: 9999fe6e2400cf734f79e2edd6f96a8adf118d92
+ms.openlocfilehash: ca83964ae4ff91fd72fcb0a156a029f4fc41721c
+ms.sourcegitcommit: a512360b601ce3d6f0e842a146d37890381893fc
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/22/2019
-ms.locfileid: "54422022"
+ms.lasthandoff: 01/11/2019
+ms.locfileid: "54232914"
