--- a/articles/sql-database/toc.yml
+++ b/articles/sql-database/toc.yml
@@ -279,6 +279,8 @@ items:
       href: sql-database-elastic-query-overview.md
     - name: Elastiska transaktioner
       href: sql-database-elastic-transactions-overview.md
+    - name: Elastic Database-jobb
+      href: elastic-jobs-overview.md
   - name: Jämförelse av SQL-funktioner
     href: sql-database-features.md
   - name: Övervakning och justering
@@ -321,8 +323,6 @@ items:
       href: sql-database-in-memory.md
     - name: Temporala tabeller
       href: sql-database-temporal-tables.md
-    - name: Jobbautomation
-      href: sql-database-job-automation-overview.md
 - name: Instruktionsguider
   items:
   - name: Översikt
@@ -341,8 +341,6 @@ items:
       href: sql-database-threat-detection.md
     - name: Konfigurera kvarhållning av säkerhetskopior med Azure Blob Storage
       href: sql-database-long-term-backup-retention-configure.md
-    - name: Konfigurera Elastic Database-jobb
-      href: elastic-jobs-overview.md
     - name: Konfigurera dynamisk datamaskering
       href: sql-database-dynamic-data-masking-get-started-portal.md
     - name: Konfigurera geo-replikering – Portal
@@ -688,9 +686,9 @@ items:
       href: sql-database-elastic-jobs-getting-started.md
     - name: Avinstallera elastiskt jobb (inaktuellt)
       href: sql-database-elastic-jobs-uninstall.md
-ms.openlocfilehash: 95ea4f676202fe06a1761c98ddb7e3e1a6f12708
-ms.sourcegitcommit: 9b6492fdcac18aa872ed771192a420d1d9551a33
+ms.openlocfilehash: 634018a1807e23700141ac11a961bd1b1411b8a8
+ms.sourcegitcommit: dede0c5cbb2bd975349b6286c48456cfd270d6e9
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/22/2019
-ms.locfileid: "54447997"
+ms.lasthandoff: 01/16/2019
+ms.locfileid: "54331409"
