--- a/articles/sql-database/toc.yml
+++ b/articles/sql-database/toc.yml
@@ -307,12 +307,6 @@ items:
         href: sql-database-performance.md
       - name: Prestandarekommendationer för Database Advisor
         href: sql-database-advisor.md
-  - name: Läs in och flytta data
-    items:
-    - name: SQL Data Sync
-      href: sql-database-sync-data.md
-    - name: Transaktionsreplikering
-      href: sql-database-managed-instance-transactional-replication.md
   - name: Databasfunktioner
     items:
     - name: Databasfunktioner
@@ -335,7 +329,7 @@ items:
       href: sql-database-cloud-migrate.md
     - name: Hantera SQL-databas efter migrering
       href: sql-database-manage-after-migration.md
-    - name: Konfigurera replikering
+    - name: Konfigurera transaktionsreplikering
       href: replication-to-sql-database.md
     - name: Konfigurera hotidentifiering
       href: sql-database-threat-detection.md
@@ -445,6 +439,8 @@ items:
       href: sql-database-export.md
     - name: Datasynkronisering
       items:
+      - name: SQL Data Sync
+        href: sql-database-sync-data.md
       - name: Datasynkroniseringsagent
         href: sql-database-data-sync-agent.md
       - name: Replikera schemaändringar
@@ -686,9 +682,9 @@ items:
       href: sql-database-elastic-jobs-getting-started.md
     - name: Avinstallera elastiskt jobb (inaktuellt)
       href: sql-database-elastic-jobs-uninstall.md
-ms.openlocfilehash: 634018a1807e23700141ac11a961bd1b1411b8a8
-ms.sourcegitcommit: dede0c5cbb2bd975349b6286c48456cfd270d6e9
+ms.openlocfilehash: 500fd22c19e0aab2cbecf0267329d5a86a5ccda2
+ms.sourcegitcommit: a512360b601ce3d6f0e842a146d37890381893fc
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/16/2019
-ms.locfileid: "54331409"
+ms.lasthandoff: 01/11/2019
+ms.locfileid: "54230914"
