--- a/articles/azure-stack/TOC.yml
+++ b/articles/azure-stack/TOC.yml
@@ -129,16 +129,8 @@ items:
       href: azure-stack-registration.md
     - name: Regionshantering
       href: azure-stack-region-management.md
-    - name: Anslut till Azure
-      items:
-      - name: Ansluta med hjälp av VPN
-        href: azure-stack-connect-vpn.md
-      - name: Om VPN gateway
-        href: azure-stack-vpn-gateway-about-vpn-gateways.md
-      - name: VPN gateway-inställningar
-        href: azure-stack-vpn-gateway-settings.md
-      - name: Ansluta med ExpressRoute
-        href: azure-stack-connect-expressroute.md
+    - name: Ansluta till Azure med ExpressRoute
+      href: azure-stack-connect-expressroute.md
     - name: Aktivera CLI för användare
       href: azure-stack-cli-admin.md
     - name: Konfigurera hanteringsmiljö
@@ -403,9 +395,9 @@ items:
     href: https://stackoverflow.com/questions/tagged/azure-stack
   - name: Utbildning och certifiering
     href: https://docs.microsoft.com/azure/azure-stack/azure-stack-train-and-cert
-ms.openlocfilehash: 03f8d00216ee555e0e7fddd946382577bb0c1904
-ms.sourcegitcommit: ba9f95cf821c5af8e24425fd8ce6985b998c2982
-ms.translationtype: HT
+ms.openlocfilehash: 91c476e8e65642e490c3a42de7d5a340964f3ae5
+ms.sourcegitcommit: 82cdc26615829df3c57ee230d99eecfa1c4ba459
+ms.translationtype: MT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/17/2019
-ms.locfileid: "54382151"
+ms.lasthandoff: 01/19/2019
+ms.locfileid: "54411721"
