--- a/articles/dns/TOC.yml
+++ b/articles/dns/TOC.yml
@@ -34,13 +34,13 @@ items:
     href: cli-samples.md
 - name: Begrepp
   items:
-  - name: DNS-zoner och -poster
+  - name: Zoner och poster
     href: dns-zones-records.md
-  - name: DNS-aliasposter
+  - name: Aliasposter
     href: dns-alias.md
-  - name: DNS-delegering med Azure DNS
+  - name: Delegering med Azure DNS
     href: dns-domain-delegation.md
-  - name: Vanliga frågor och svar om DNS
+  - name: VANLIGA FRÅGOR OCH SVAR
     href: dns-faq.md
   - name: Använda privata DNS-zoner
     href: private-dns-overview.md
@@ -82,6 +82,8 @@ items:
       href: dns-reverse-dns-for-azure-services.md
   - name: Importera och exportera en DNS-zonfil
     href: dns-import-export.md
+  - name: Delegera en underdomän
+    href: delegate-subdomain.md
   - name: Integrera med andra Azure-tjänster
     href: dns-for-azure-services.md
   - name: Skydda DNS-zoner och -poster
@@ -146,9 +148,9 @@ items:
     href: https://azure.microsoft.com/pricing/calculator/
   - name: Tjänstuppdateringar
     href: https://azure.microsoft.com/updates/?product=dns
-ms.openlocfilehash: ca6910655425711fda12d5f511538d52f380b239
-ms.sourcegitcommit: 3ba9bb78e35c3c3c3c8991b64282f5001fd0a67b
+ms.openlocfilehash: ac539c7b7454a642a8bc1d36ef01a5e7a232375d
+ms.sourcegitcommit: 9b6492fdcac18aa872ed771192a420d1d9551a33
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/15/2019
-ms.locfileid: "54319536"
+ms.lasthandoff: 01/22/2019
+ms.locfileid: "54446372"
